# engine-sim

./: .gitignore  .gitmodules  CMakeLists.txt  GDSCRIPT_SETUP_GUIDE.md  README.md  SConstruct  gas_system_test_output.csv  intake_stroke.csv  project.godot
.godot/editor/: demo.tscn-editstate-d3ba99547ebcccacf8c91871bb1c1ce3.cfg  editor_layout.cfg  editor_script_doc_cache.res  filesystem_cache10  filesystem_update4  project_metadata.cfg  script_editor_cache.cfg
.godot/imported/: Ambient.wav-0fd8c4294d3b223ca46972f12769b42b.md5  BalconyCeiling.png-7afe825cc7b8670f703dbc4ef85e66c6.ctex  BalconyCeiling.png-7afe825cc7b8670f703dbc4ef85e66c6.md5  BalconyCeilingNormal.png-4f10b500220eb650ec4674b68ab4e417.ctex  BalconyCeilingNormal.png-4f10b500220eb650ec4674b68ab4e417.md5  BalconyFloor.png-00d2e3565b7b2bf3ad231a01852d7c9e.ctex  BalconyFloor.png-00d2e3565b7b2bf3ad231a01852d7c9e.md5  BalconyFloorSpecular.png-ec9653f5bde7ace5eb61206965367c9e.ctex  BalconyFloorSpecular.png-ec9653f5bde7ace5eb61206965367c9e.md5  BalconySideWall.png-eace8a71376e8eaadeaf915596f8b20d.ctex  BalconySideWall.png-eace8a71376e8eaadeaf915596f8b20d.md5  BalconySideWallNormal.png-0db2b6fb7eb3f227cfc8a816dcbc85b7.ctex  BalconySideWallNormal.png-0db2b6fb7eb3f227cfc8a816dcbc85b7.md5  BalconyWall.png-c558b37f575ffe1ceaf34d7971e1375f.ctex  BalconyWall.png-c558b37f575ffe1ceaf34d7971e1375f.md5  BalconyWallNormal.png-62aef13579ae7b744a7e9c4c5842ffcd.ctex  BalconyWallNormal.png-62aef13579ae7b744a7e9c4c5842ffcd.md5  BalconyWallSpecular.png-f550a4118277d8d1eee144112b758677.ctex  BalconyWallSpecular.png-f550a4118277d8d1eee144112b758677.md5  BathTiles.png-93a35fe31d5e196598b733c6ab5d661f.ctex  BathTiles.png-93a35fe31d5e196598b733c6ab5d661f.md5  BathTilesNormal.png-3baceae44dfb02303de1df4c263d258d.ctex  BathTilesNormal.png-3baceae44dfb02303de1df4c263d258d.md5  BathroomCounter.png-7fa03e727d57a6f8be3d73d859afdcb8.ctex  BathroomCounter.png-7fa03e727d57a6f8be3d73d859afdcb8.md5  BathroomFloor.png-afea0dd09f1ef24b4f911eed66c4706c.ctex  BathroomFloor.png-afea0dd09f1ef24b4f911eed66c4706c.md5  BathroomFloorNormal.png-4fdb6382122656b2a257437dc0693ad0.ctex  BathroomFloorNormal.png-4fdb6382122656b2a257437dc0693ad0.md5  BathroomMisc.png-fa9f12e150b68eeeb7bd40374e13ab4f.ctex  BathroomMisc.png-fa9f12e150b68eeeb7bd40374e13ab4f.md5  BathroomMiscNormal.png-03dca891e4a5aa237e660cb656a725a7.ctex  BathroomMiscNormal.png-03dca891e4a5aa237e660cb656a725a7.md5  BigDains.png-3527f2f195eb7700757376c004468efc.ctex  BigDains.png-3527f2f195eb7700757376c004468efc.md5  BoxesComposite.png-7f88587a45bb9e5be00ff2e6e4f530a3.ctex  BoxesComposite.png-7f88587a45bb9e5be00ff2e6e4f530a3.md5  Brick.png-879b71786d76d6671ef9eda6d5b91887.ctex  Brick.png-879b71786d76d6671ef9eda6d5b91887.md5  BrickLarge.png-1cd21f05a5f066a946821f6ef36a5b49.md5  (+263 more)
addons/engine_sim/: .gitignore  README.md  SConstruct  build_macos_arm64.sh  engine_sim.gdextension  engine_sim.gdextension.uid
addons/engine_sim/engine-core/: CMakeLists.txt  CMakePresets.json
addons/engine_sim/engine-core/art/: assets.blend.import
addons/engine_sim/engine-core/dependencies/submodules/: CMakeLists.txt
addons/engine_sim/engine-core/design/: engine_sim_layout.png.import
addons/engine_sim/engine-core/docs/: partitioned_fft_convolution.md
addons/engine_sim/engine-core/docs/public/screenshots/: screenshot_v01.png.import
addons/engine_sim/engine-core/es/sound-library/archive/: test_engine_14_eq_adjusted_16.wav.import  test_engine_15_eq_adjusted_16.wav.import
addons/engine_sim/engine-core/es/sound-library/new/: mild_exhaust.wav.import  mild_exhaust_reverb.wav.import  minimal_muffling_01.wav.import  minimal_muffling_02.wav.import  minimal_muffling_03.wav.import
addons/engine_sim/engine-core/es/sound-library/sharp/: sharp_01.wav.import
addons/engine_sim/engine-core/es/sound-library/smooth/: smooth_39.wav.import
addons/engine_sim/engine-core/include/: engine_sim_runtime_c.h  synthesizer.h  transmission.h
addons/engine_sim/engine-core/scripting/include/: actions.h  compiler.h  object_reference_node.h  transmission_node.h  vehicle_node.h
addons/engine_sim/engine-core/scripting/src/: compiler.cpp  language_rules.cpp
addons/engine_sim/engine-core/src/: convolution_filter.cpp  engine.cpp  engine_sim_application.cpp  engine_sim_runtime_c.cpp  jitter_filter.cpp  piston_engine_simulator.cpp  simulator.cpp  synthesizer.cpp
addons/engine_sim/engine-core/test/: function_test.cpp  gas_system_tests.cpp  profile_sim.cpp  script_compile_tests.cpp  synthesizer_tests.cpp
addons/engine_sim/src/: engine_sim_runtime_node.cpp  engine_sim_runtime_node.h  entry.cpp
assets/: main.mr  test_simple.mr
assets/actions/: actions.mr
assets/engines/downloaded/: busEngine.mr  desil.mr
assets/objects/: objects.mr
assets/sound-library/archive/: engine_02.wav.import  engine_04.wav.import  test_engine.wav.import  test_engine_02_16.wav.import  test_engine_03_16.wav.import  test_engine_04_16.wav.import  test_engine_05_16.wav.import  test_engine_06_16.wav.import  test_engine_07_16.wav.import  test_engine_08_16.wav.import  test_engine_09_16.wav.import  test_engine_13_16.wav.import  test_engine_14_eq_adjusted_16.wav.import  test_engine_15_eq_adjusted_16.wav.import  test_engine_16.wav.import  test_engine_16_eq_adjusted_16.wav.import  test_engine_17.wav.import  test_engine_18.wav.import
assets/sound-library/new/: mild_exhaust.wav.import  mild_exhaust_reverb.wav.import  minimal_muffling_01.wav.import  minimal_muffling_02.wav.import  minimal_muffling_03.wav.import
godot-demo/: README.md  project.godot
godot-demo/.godot/: extension_list.cfg
godot-demo/assets/: main.mr
godot-demo/scenes/: demo.tscn
godot-demo/scripts/: demo.gd  demo.gd.uid
include/: constants.h  gas_system.h  jitter_filter.h  leveling_filter.h  synthesizer.h
scenes/: demo.tscn  driving_demo.tscn
scripts/: build_all.sh  build_gdext.sh  demo.gd  demo.gd.uid  driving_demo.gd  driving_demo.gd.uid
src/: engine_sim_runtime_c.cpp  leveling_filter.cpp  piston_engine_simulator.cpp  synthesizer.cpp
tools/: signpost_summary.py
(+180 files in other folders)
